load("@gazelle//:def.bzl", "gazelle")
load("@rules_go//go:def.bzl", "go_library", "go_test")

gazelle(name = "gazelle")

go_library(
    name = "injector3",
    srcs = ["injector3.go"],
    importpath = "github.com/minhajuddin/injector3",
    visibility = ["//visibility:public"],
)

go_test(
    name = "injector3_test",
    srcs = ["injector3_test.go"],
    deps = [
        ":injector3",
        "@com_github_stretchr_testify//assert:go_default_library",
    ],
)
